# flight-deals-scanner

./: .coverage  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.json  docker-compose.yml  flight_scanner.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  scan.yml
data/: airports.json
tests/: test_scanner.py
